HelloUltraviolet/Fixtures/RejectedSource/Parallelism/ExecutionDomainsDiagnostics/Source/Main.uv
//! Rejected structured-parallelism specimen for execution-domain diagnostics ownership.

public procedure executionDomainsDiagnosticsReference() -> () {
    gpu_barrier()
}
